# udrive

./: .gitignore  .pre-commit-config.yaml  ADMIN_PANEL_PLAN.md  CHAT_TROUBLESHOOTING.md  DB_ACCESS_GUIDE.md  DB_VISION.md  DISPUTES_MEDIATION.md  FILTER_REFACTOR_PLAN.md  INSTRUCTOR_CHAT.md  INSTRUCTOR_HOME.MD  LESSONS_PLAN.md  LOGIN_VISUAL.md  MOBILE_PLAN.md  PAYMENT_FLOW.md  PAYMENT_PLAN.md  PRICING_ANALYSIS.md  PROJECT_GUIDELINES.md  PROJECT_OPTIMIZING.md  QUICK_SETUP.md  REFACTOR_PLAN.md  RESCHEDULING_PLAN.md  SCHEDULING_PLAN.md  SQLADMIN_REFACTOR.md  TELA_BUSCAR.html  TELA_PERFIL_ALUNO.html  VISUAL_IDEA.md  WEBSOCKET_FIX_README.md  calculadora.py  docker-compose.yml  package-lock.json
admin/: package.json  (+2 more)
backend/: .env.example  Dockerfile  alembic.ini  celerybeat-schedule  check_dates.py  pyproject.toml  requirements.txt  test_db.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_01_22_initial_setup.py  2026_01_23_create_auth_tables.py  2026_01_29_add_payment_tables.py  2026_01_29_add_scheduling_and_availability.py  2026_01_29_criar_perfis_e_geolocalizacao.py  2026_01_30_add_personal_info_fields.py  2026_02_02_move_personal_info_to_users.py  2026_02_03_add_biological_sex.py  2026_02_05_create_real_payments_table.py  2026_02_06_add_started_at_to_schedulings.py  2026_02_06_create_reviews_table.py  2026_02_07_add_reschedule_fields.py  2026_02_09_add_student_confirmed_at.py  2026_02_09_create_messages_table.py  2026_02_10_add_city_to_instructor_profiles.py  2026_02_10_enable_unaccent_extension.py  2026_02_11_add_rescheduled_by_to_schedulings.py  2026_02_13_add_escrow_support.py  (+17 more)
backend/scripts/: check_all.py  check_availability.py  check_instructor.py  check_tokens.py  debug_reviews.py  fix_new_instructor_password.py  fix_profile.py  generate_test_checkout.py  seed_test_data.py  update_seed_instructor.py  verify_admin.py  verify_profile_creation.py  verify_query_optimization.py
backend/src/: __init__.py
backend/tests/: conftest.py  test_handle_stripe_webhook.py  test_health.py  test_payment_state_transitions.py  test_release_payment.py  test_user_deletion.py
(+524 files in other folders)
